--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "posthog-js": "^1.194.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "posthog-js": "^1.194.0"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@netlify/functions": "^2.8.2",
@@ -20,6 +20,6 @@
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
     "typescript": "~5.6.2",
-    "vite": "^5.4.11"
+    "vite": "^7.3.1"
   }
 }
