--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,12 @@
   publish = "dist"
   functions = "netlify/functions"
 
+[dev]
+  command = "npm run dev"
+  targetPort = 3000
+  port = 8888
+  autoLaunch = false
+
 [functions]
   node_bundler = "esbuild"
 
